Fix js project index spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@
 
 /* General */
 body {
-  /* background-color: #AF064A; */
+  background-color: #AF064A;
 }
 
 a {
